All the API docs are consistent with clients and server's status codes
